--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -1,6 +1,1 @@
-  /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;1,100;1,400&display=swap');
-
-
-  h1{
-    font-family: 'Montserrat', sans-serif;
-  } */
+@import url('https://fonts.googleapis.com/css2?family=Afacad:wght@600&display=swap');
