--- a/myapp/src/components/CheckOut/CheckOut.css
+++ b/myapp/src/components/CheckOut/CheckOut.css
@@ -1,6 +1,6 @@
-body {
-    font-family: 'lato', sans-serif;
-  }
+/* body {
+    font-family: 'lato', sans-serif; */
+  /* } */
   .container {
     max-width: 1000px;
     margin-left: auto;
