--- a/myapp/src/components/Header/Header.css
+++ b/myapp/src/components/Header/Header.css
@@ -1,2 +1,8 @@
-
+.nav{
+    width: 100%;
+    background-color: rgba(0.3);  /* Set the transparency to 0.3 */
+    overflow: hidden;
+    
+  }
+  
   
