--- a/myapp/src/components/Header/Header.css
+++ b/myapp/src/components/Header/Header.css
@@ -1,8 +1,25 @@
-.nav{
-    width: 100%;
-    background-color: rgba(0.3);  /* Set the transparency to 0.3 */
-    overflow: hidden;
-    
+.navbar {
+  background-color: lightblue;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+}
+
+.navlink {
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+}
+
+@media (max-width: 768px) {
+  .navbar-brand {
+    font-size: 1.2rem;
   }
+
+  .navlink {
+    margin: 0.5rem 0;
+  }
+}
+
   
   
