--- a/myapp/src/components/ViewMedicines/ViewMedicines.css
+++ b/myapp/src/components/ViewMedicines/ViewMedicines.css
@@ -1,29 +1,15 @@
-.medicine-card {
-    width: 100%;
-    margin-bottom: 20px;
+.container {
+    margin: 20px;
   }
   
-  @media (min-width: 576px) {
-    .medicine-card {
-      width: 48%;
+  .card {
+    min-width: 18rem;
+  }
+  
+  @media (max-width: 768px) {
+    .card {
+      min-width: 100%;
     }
   }
   
-  @media (min-width: 768px) {
-    .medicine-card {
-      width: 30%;
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .medicine-card {
-      width: 23%;
-    }
-  }
-  
-  @media (min-width: 1200px) {
-    .medicine-card {
-      width: 18%;
-    }
-  }
   
