--- a/myapp/src/components/ViewMedicines/ViewMedicines.css
+++ b/myapp/src/components/ViewMedicines/ViewMedicines.css
@@ -12,4 +12,30 @@
     }
   }
   
-  
+  /* button */
+
+  .button-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+
+.link-button {
+  text-decoration: none;
+}
+
+.wishlist-button,
+.cart-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.wishlist-button:hover,
+.cart-button:hover {
+  background-color: #0056b3;
+}
