--- a/myapp/src/components/ViewMedicines/ViewMedicines.css
+++ b/myapp/src/components/ViewMedicines/ViewMedicines.css
@@ -33,6 +33,7 @@
   font-size: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
+  margin-bottom: 10px;
 }
 
 .wishlist-button:hover,
