--- a/myapp/src/components/ViewMedicines/ViewMedicines.css
+++ b/myapp/src/components/ViewMedicines/ViewMedicines.css
@@ -34,6 +34,9 @@
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   margin-bottom: 10px;
+  width: 100px; 
+  height: 30px; 
+  font-size: 14px; 
 }
 
 .wishlist-button:hover,
