--- a/myapp/src/components/Header/Header.css
+++ b/myapp/src/components/Header/Header.css
@@ -1,25 +1,17 @@
+/* Header.css */
+
+/* Default styles for larger screens */
 .navbar {
-  background-color: lightblue;
+  background-color: #5CDB95; /* Change this to your desired background color */
 }
 
-.navbar-brand {
-  font-size: 1.5rem;
-}
-
-.navlink {
-  padding: 0.5rem;
-  margin: 0 0.5rem;
-}
-
+/* Media query for smaller screens */
 @media (max-width: 768px) {
-  .navbar-brand {
-    font-size: 1.2rem;
-  }
-
-  .navlink {
-    margin: 0.5rem 0;
+  .navbar {
+    background-color: #5CDB95; /* Change this to your desired background color for smaller screens */
   }
 }
+
 
   
   
