--- a/myapp/src/components/Footer/Footer.css
+++ b/myapp/src/components/Footer/Footer.css
@@ -1,2 +1,22 @@
 
+.footer {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
 
+  .footer h2 {
+    margin: 0;
+    color: blue; 
+  }
+
+  @media (max-width: 768px) {
+    
+    .footer {
+      padding: 10px;
+    }
+}
